k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: appk3s
  labels:
    app.kubernetes.io/managed-by: appk3s
